# Secrets-Scanner

./: .gitignore  .pre-commit-hooks.yaml  .secrets-baseline.json  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  allowlist.py  baseline.py  compliance.py  engine.py  git_history.py  gitignore.py  logger.py  models.py  pragma.py  reporter.py  verify.py  walker.py
detectors/: __init__.py  base.py  entropy.py  signature.py
rules/: secret_patterns.yaml
tests/: test_compliance.py  test_git_history.py  test_reporter.py  test_scanner.py  test_verify.py
